fixed whitespace issue in mobile view

--- a/public/style.css
+++ b/public/style.css
@@ -34,7 +34,6 @@ body {
   width: 100vw;
   /* padding: 1em; */
   overflow: hidden;
-  border: 1 px solid red;
 }
 
 .background-wrapper {
